[FIX] [SSQ-3331] fixed z-indexes #done

--- a/styles/components/customersSlider.css
+++ b/styles/components/customersSlider.css
@@ -35,7 +35,7 @@
   cursor: pointer;
   transition: all 0.6s ease;
   position: relative;
-  z-index: 1000;
+  z-index: 1;
 }
 .customers-slider-wrapper .prev-slide-icon-wrapper:hover,
 .customers-slider-wrapper .next-slide-icon-wrapper:hover {
@@ -89,7 +89,7 @@
   align-items: center;
   justify-content: center;
   padding-bottom: 26px;
-  z-index: 100;
+  z-index: 10;
 }
 .customers-slider-wrapper .dots-wrapper .dots .dot {
   cursor: pointer;
